# qh-audio

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: adsr.cpp  adsr.hpp  app.cpp  app.hpp  bld_archivo_wav.cpp  bld_archivo_wav.hpp  escritura_binaria.hpp  evento.hpp  generador_binaural.cpp  generador_binaural.hpp  generador_mono.cpp  generador_mono.hpp  generador_quad.cpp  generador_quad.hpp  generador_seno.cpp  generador_seno.hpp  generador_stereo.cpp  generador_stereo.hpp  i_generador_muestra.hpp  i_generador_multicanal.hpp  main.cpp  mezclador.cpp  mezclador.hpp  modulo_base.cpp  modulo_base.hpp  motor_render.cpp  motor_render.hpp  oscilador_seno.hpp  oscilador_seno.tpp  programador.cpp  programador.hpp  reloj.cpp  reloj.hpp  vca.cpp  vca.hpp
